Major upgrade. Added playsms, corrected delivary

--- a/static/description/index.html
+++ b/static/description/index.html
@@ -4,18 +4,18 @@ Allows 2 way sms conversations between leads/partners using the twilio gateway<b
 Also supports other gateways if you can be bothered coding them...<br>
 Automaticlly creates new leads if a lead or partner doesn't have that mobile number<br/>
 Built modularly so you can easily add a new gateway of your choice<br/>
-Twilio gateway accounts require that you set allowed delivary countries<br/>
+Twilio gateway accounts require that you set allowed delivery countries<br/>
 <br>
 <b>Individual gateway features</b>
 <table style="width:100%;">
-<tr><th>SMS Gateway</th><th>Send SMS</th><th>Delivary Receipts*</th><th>Receive SMS*</th></tr>
+<tr><th>SMS Gateway</th><th>Send SMS</th><th>delivery Receipts*</th><th>Receive SMS*</th></tr>
 <tr><td>twilio</td><td>O</td><td>O</td><td>O</td></tr>
 <tr><td>smsglobal</td><td>O</td><td>X</td><td>X</td></tr>
 <tr><td>smsgateway.ca</td><td>O</td><td>X</td><td>X</td></tr>
 </table>
 <br/>
 <b>Note*</b><br/>
-Real time receiving smses and delivary receipts require a live server, a scheduled action will also check for new smses but that’s only every hour.<br/>
+Real time receiving smses and delivery receipts require a live server, a scheduled action will also check for new smses but that’s only every hour.<br/>
 <br>
 <section class="oe_container">
     <div class="oe_row oe_spaced">
